--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -10,6 +10,6 @@ RUN sed -i 's/^log_file .*/log_file\ =\ \/data\/frps.log/' /etc/frps.ini && \
     chmod +x /usr/local/bin/run.sh && \
     mkdir /data/
 
-EXPOSE 80 443 7000 10000-50000
+EXPOSE 80 443 7000 7500 17100-17200
 
-CMD /usr/local/bin/run.sh
+CMD sh -c /usr/local/bin/run.sh
